--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <title>Page Title</title>
+        <link type="text/css" rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
+        <div class="container">
+            <h1>Leaukemia</h1>
+            <p>data: <span id="data"></span></p>
+        </div>
         <script type="text/javascript" src="./dist/bundle.js">
         </script>
         <script type="text/javascript" src="./index.js"></script>
