--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
     <body>
         <div class="container">
             <h1>Leaukemia</h1>
-            <p>data: <span id="data"></span></p>
+
+            <h4>Blood values:</h4>
+
+            <!-- normal blood cells -->
+            <ul>
+                <li>Red blood cells: <span id="red-blood-cell-count">0</span></li>
+                <li>White blood cells: <span id="white-blood-cell-count">0</span></li>
+                <li>thrombocytes: <span id="thrombocytes-count">0</span></li>
+            </ul>
+
+            <ul>
+                <!-- leukemic cells -->
+                <li>aggressive leukemia cells: <span id="aggressive-leukemia-cell-count">0</span></li>
+                <li>non-aggressive leukemia cells: <span id="non-aggressive-leukemia-cell-count">0</span></li>
+            </ul>
+
+            <ul>
+                <!-- drug in action -->
+                <li>drug in action: <span id="drug-in-action">none</span></li>
+
+                <!-- status -->
+                <li>is alive: <span id="is-alive">false</span></li>
+
+                <!-- metadata -->
+                <li>(metadata) time since in critical condition: <span id="critical-time">0</span></li>
+            </ul>
         </div>
         <script type="text/javascript" src="./dist/bundle.js">
         </script>
