add start/pause btn

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <!-- metadata -->
                 <li>(metadata) time since in critical condition: <span id="critical-time">0</span></li>
             </ul>
+
+            <!-- buttons -->
+            <button type="button" id="pause-btn">start</button>
         </div>
         <script type="text/javascript" src="./dist/bundle.js">
         </script>
