--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
             <!-- buttons -->
             <button type="button" id="pause-btn">start</button>
+            <button type="button" id="alexan-btn">Introduce Alexan</button>
         </div>
         <script type="text/javascript" src="./dist/bundle.js">
         </script>
