introduce ts in main file

--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
             <button type="button" id="pause-btn">start</button>
             <button type="button" id="alexan-btn">Introduce Alexan</button>
         </div>
-        <script type="text/javascript" src="./dist/bundle.js">
-        </script>
-        <script type="text/javascript" src="./index.js"></script>
+        <script type="text/javascript" src="./dist/bundle.js"></script>
     </body>
 </html>
